# wpn114

./: .gitignore  .gitmodules  CMakeLists.txt  HemicycliaSpeakerSetup.qml  QuarreScenario.qml  README.md  ashes.cpp  audiobackend.cpp  audiobackend.h  audiomaster.cpp  audiomaster.h  audioplugin.h  audioplugin.mm  bursts.cpp  bursts.h  fields.cpp  fields.h  main.cpp  main.qml  main.toml  oneshots.cpp  oneshots.h  qml.qrc  qml_plugin.cpp  qml_plugin.hpp  qmldir  qsine.cpp  qsine.h  quarre.qml  rooms.cpp  rooms.h  send.cpp  send.h  soundtracks.cpp  soundtracks.h  vumeter.h  wpn114-qt.pro  wpn114.pro  wpnsndfile.cpp  wpnsndfile.hpp
Classes/: Granary.sc  Rooms.sc  VSTGen.sc  WPN114.sc  phone-server.sc  quarremappings.sc
Plugins/Fields/: CMakeLists.txt  Fields.cpp
Plugins/Granary/: CMakeLists.txt  Granary.cpp
Plugins/Rooms/: CMakeLists.txt  Rooms.cpp
Plugins/VSTGen/: CMakeLists.txt  VSTGen.cpp
audio_objects/ashes/: ashes.cpp  ashes.h  ashes.hpp
audio_objects/audioplugin/: audioplugin.cpp  audioplugin.hpp  audioplugin.mm
audio_objects/bursts/: bursts.cpp  bursts.hpp
audio_objects/channelmapper/: channelmapper.cpp  channelmapper.hpp
audio_objects/clock/: audioclock.cpp  audioclock.hpp
audio_objects/convolver/: convolver.cpp  convolver.hpp
audio_objects/downmix/: downmix.cpp  downmix.hpp
audio_objects/fields/: fields.cpp  fields.hpp
audio_objects/fork/: fork.cpp  fork.hpp
audio_objects/hlpf/: filter.cpp  filter.hpp
audio_objects/limiter/: masterlimiter.cpp  masterlimiter.hpp
audio_objects/mangler/: mangler.cpp  mangler.hpp
audio_objects/multisampler/: multisampler.cpp  multisampler.hpp
audio_objects/oneshots/: oneshots.cpp  oneshots.hpp
audio_objects/peakrms/: peakrms.cpp  peakrms.hpp
audio_objects/rooms/: rooms.cpp  rooms.hpp
audio_objects/sampler/: sampler.cpp  sampler.hpp
audio_objects/sharpen/: sharpen.cpp  sharpen.hpp
audio_objects/sine/: sine.cpp  sine.hpp
audio_objects/stpanner/: stereopanner.cpp  stereopanner.hpp
audio_objects/vumeter/: vumeter.cpp
qml/: PinkAudio.qml  PushDevice.qml  VUMeter.qml  qmldir
source/audio/: audio.cpp  audio.hpp
source/midi/: midi.hpp
source/oscquery/: netexplorer.cpp
src/: audiobackend.cpp  audiobackend.hpp  audiomaster.cpp  audiomaster.hpp  backend2.cpp  backend2.hpp  midi-backend.cpp  midi-backend.hpp  oschandler.cpp  oschandler.h  oscqueryhandler.cpp  oscqueryhandler.hpp
src/audio/: audio.cpp  audio.hpp  audiobackend.cpp  audiobackend.hpp  audiomaster.cpp  backend2.hpp  soundfile.cpp  soundfile.hpp
src/audio/backend/: audio_backend.cpp  audio_backend.hpp  backend.cpp  backend.h
src/audio/backend/soundfiles/: soundfile_handler.hpp
src/audio/sndfile/: sndf.cpp
src/audio/units/: units_base.hpp
src/audio/units/vst/: vst.cpp  vst.hpp  vst2x.mm
src/audio/vst/: vst.cpp  vst.h  vst2x.mm
src/control/: controller_base.hpp
src/control/midi/backend/: midi_backend.hpp
src/http/: http.cpp  http.hpp
src/midi/: midi.cpp  midi.hpp
src/midi/devices/push/: device_enums.hpp
src/osc/: osc.cpp  osc.hpp
src/oscquery/: client.cpp  client.hpp  device.cpp  device.hpp  file.cpp  file.hpp  folder.cpp  folder.hpp  netexplorer.hpp  node.cpp  node.hpp  nodetree.cpp  nodetree.hpp  query-server.cpp  query-server.hpp  server.cpp  server.hpp
src/time/: timeobject.hpp
src/websocket/: websocket.cpp  websocket.hpp
src/wpn114/audio/: backend.cpp  backend.hpp  context.hpp
src/wpn114/audio/soundfiles/: soundfile_handler.cpp
src/wpn114/audio/units/: unit_base.hpp
src/wpn114/audio/units/fields/: fields.cpp  fields.hpp
src/wpn114/audio/units/plugins/: vst.cpp  vst.cpp.autosave  vst.hpp  vst2x.mm  vstwindow.m
src/wpn114/control/: controller_base.hpp
src/wpn114/control/midi/: backend.cpp  backend.hpp
src/wpn114/control/midi/push/: push_controller.cpp  push_controller.hpp
src/wpn114/control/push/: push_controller.cpp  push_controller.hpp
src/wpn114/view/: main.qml
wpn114/: CMakeLists.txt  main.cpp  wpn114.hpp
wpn114/audio/: CMakeLists.txt
wpn114/audio/backend/: CMakeLists.txt  backend.cpp  backend.hpp  context.hpp  sndfile_support.cpp  sndfile_support.hpp  unit_base.cpp  unit_base.hpp  unit_base.toml
wpn114/audio/plugins/: CMakeLists.txt
wpn114/audio/plugins/ambisonics/: CMakeLists.txt  ambisonics.cpp
wpn114/audio/plugins/ash/: CMakeLists.txt  ash.cpp
wpn114/audio/plugins/bursts/: CMakeLists.txt  bursts.cpp
wpn114/audio/plugins/circles/: CMakeLists.txt  circles.cpp
wpn114/audio/plugins/fields/: CMakeLists.txt  fields.cpp  fields.hpp
wpn114/audio/plugins/granary/: CMakeLists.txt  granary.cpp
wpn114/audio/plugins/oneshots/: CMakeLists.txt  oneshots.cpp
wpn114/audio/plugins/poly-oneshots/: CMakeLists.txt  poly-oneshots.cpp
wpn114/audio/plugins/rooms/: CMakeLists.txt  rooms.cpp
wpn114/audio/plugins/soundtracks/: CMakeLists.txt  soundtracks.cpp
wpn114/audio/plugins/vbap/: CMakeLists.txt  vbap.cpp
wpn114/audio/plugins/vst/: CMakeLists.txt  vst.cpp  vst.hpp  vst2x.mm  vstwindow.h
wpn114/audio/utilities/trigonometry/: trigonometry.cpp  trigonometry.hpp
wpn114/control/backend/: CMakeLists.txt  backend.cpp  backend.hpp  controller_base.hpp
wpn114/control/plugins/: CMakeLists.txt
wpn114/control/plugins/push_1/: CMakeLists.txt  push_controller.cpp  push_controller.hpp
wpn114/network/: CMakeLists.txt  net_hdl.cpp  net_hdl.hpp  net_toml.cpp  net_toml.hpp
